--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,10 @@ on:
   push:
     branches:
       - fix-api-t
-      - main
-      - staging
 
 jobs:
   build-and-test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -31,6 +29,10 @@ jobs:
 
     - name: Lint code
       run: npm run lint
+
+    - name: Check for syntax errors
+      run: |
+        npm run check-syntax
 
     - name: Run tests
       run: npm test
